Revert "升级到SpringBoot3.5和JDK21"： 在ubuntu上，用maven+java-21-openjdk-amd64 构建一直报错： Caused by: org.codehaus.plexus.compiler.CompilerException: error: release version 21 not supported
找不到原因，升级maven，替换jdk，都不生效，先回滚到jdk8（怀疑是引入的内部登录sdk问题，先不考虑）